--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
 certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
 cycler==0.10.0
+Flask==1.1.2
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.16.0
+jsonify==0.5
 kiwisolver==1.2.0
-matplotlib @ file:///C:/ci/matplotlib-base_1592846084747/work
+MarkupSafe==1.1.1
 mkl-fft==1.1.0
 mkl-random==1.1.1
 mkl-service==2.3.0
@@ -10,8 +18,14 @@ pandas @ file:///C:/ci/pandas_1592841747005/work
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
+requests==2.24.0
+scikit-learn==0.23.1
 scipy @ file:///C:/ci/scipy_1592916958183/work
 seaborn==0.10.1
 six==1.15.0
+sklearn==0.0
+threadpoolctl==2.1.0
 tornado==6.0.4
+urllib3==1.25.9
+Werkzeug==1.0.1
 wincertstore==0.2
