--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ chardet==3.0.4
 click==7.1.2
 cycler==0.10.0
 Flask==1.1.2
+gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -10,10 +11,10 @@ joblib==0.16.0
 jsonify==0.5
 kiwisolver==1.2.0
 MarkupSafe==1.1.1
-matplotlib
-mkl-fft
-mkl-random
-mkl-service
+matplotlib 
+mkl-fft==1.1.0
+mkl-random==1.1.1
+mkl-service==2.3.0
 numpy==1.18.5
 pandas 
 pyparsing==2.4.7
@@ -21,7 +22,7 @@ python-dateutil==2.8.1
 pytz==2020.1
 requests==2.24.0
 scikit-learn==0.23.1
-scipy
+scipy 
 seaborn==0.10.1
 six==1.15.0
 sklearn==0.0
